; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_glock.c_gl_hash.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/gfs2/extr_glock.c_gl_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gfs2_sbd = type { i32 }
%struct.lm_lockname = type { %struct.gfs2_sbd*, %struct.gfs2_sbd* }

@GFS2_GL_HASH_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gfs2_sbd*, %struct.lm_lockname*)* @gl_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gl_hash(%struct.gfs2_sbd* %0, %struct.lm_lockname* %1) #0 {
  %3 = alloca %struct.gfs2_sbd*, align 8
  %4 = alloca %struct.lm_lockname*, align 8
  %5 = alloca i32, align 4
  store %struct.gfs2_sbd* %0, %struct.gfs2_sbd** %3, align 8
  store %struct.lm_lockname* %1, %struct.lm_lockname** %4, align 8
  %6 = load %struct.lm_lockname*, %struct.lm_lockname** %4, align 8
  %7 = getelementptr inbounds %struct.lm_lockname, %struct.lm_lockname* %6, i32 0, i32 1
  %8 = call i32 @jhash(%struct.gfs2_sbd** %7, i32 4, i32 0)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.lm_lockname*, %struct.lm_lockname** %4, align 8
  %10 = getelementptr inbounds %struct.lm_lockname, %struct.lm_lockname* %9, i32 0, i32 0
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @jhash(%struct.gfs2_sbd** %10, i32 4, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @jhash(%struct.gfs2_sbd** %3, i32 8, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32, i32* @GFS2_GL_HASH_MASK, align 4
  %16 = load i32, i32* %5, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @jhash(%struct.gfs2_sbd**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
